# uud

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile.server  README.md  SETUP.md  USAGE.md  compile_commands.json
client/: CMakeLists.txt
client/cmake/: IncludeSDL3.cmake
client/src/: main.cpp
client/src/core/: defer.hpp  resources.cpp  resources.hpp  state.cpp  state.hpp  types.hpp
client/src/game/: actions.hpp  card.hpp  events.hpp  game_log.hpp  game_snapshot.hpp  instances.cpp  instances.hpp  matchmaking.hpp  permanent.hpp  phase.hpp  player.hpp  prompts.hpp  textures.cpp  textures.hpp  zone.hpp
client/src/net/: auth_client.cpp  auth_client.hpp  game_client.cpp  game_client.hpp  matchmaking_client.cpp  matchmaking_client.hpp  token_store.cpp  token_store.hpp
client/src/net/convert/: proto_convert.cpp  proto_convert.hpp
client/src/scenes/common/: scene_helpers.cpp  scene_helpers.hpp  ui_theme.hpp
client/src/scenes/intro/: intro.cpp  intro.hpp
client/src/scenes/login/: login.cpp  login.hpp
client/src/scenes/match/: card_render.cpp  card_render.hpp  game_state_local.cpp  game_state_local.hpp  match.cpp  systems.cpp  systems.hpp
client/src/scenes/menu/: menu.cpp  menu_types.hpp
client/src/ui/box/: ui_box.cpp
client/src/ui/context/: ui_context.cpp  ui_context.hpp  ui_layout.cpp
client/src/ui/widgets/: widget_draw.cpp  widgets.cpp  widgets.hpp
engine/: CARD_DOCS.md  CMakeLists.txt
engine/cmake/: IncludeLua.cmake  IncludeProtobuf.cmake  IncludeSol2.cmake
engine/include/cle/abilities/: activated_ability.hpp
engine/include/cle/core/: card.hpp
engine/include/cle/game/: game_context.hpp
engine/include/cle/lua/: builder.hpp  engine.hpp
engine/include/cle/mana/: mana_cost.hpp
engine/include/cle/serialization/: card_serializer.hpp
engine/include/cle/triggers/: trigger_type.hpp
server/: .clang-tidy  .dockerignore  CMakeLists.txt  README.md
server/cmake/: IncludeHiredis.cmake  IncludeJwtCpp.cmake  IncludeLibpqxx.cmake  IncludePrometheusCpp.cmake  IncludeSpdlog.cmake  IncludeYamlCpp.cmake
server/config/: server.yaml
server/config/decks/: black.deck  green.deck
server/mtga_decompiled/Assembly-CSharp/: AnimationFramerateLimiter.cs  Assembly-CSharp.csproj  DualCapturePass.cs  DualColorCaptureFeature.cs  DuelSceneLayersController.cs  ExportRenderTexture.cs  FrontDoorTest.cs  FullScreenPass.cs  FullScreenPostProcessFeature.cs  ImageBlitFeature.cs  NetworkMessagingHarnessLauncher.cs  NetworkMessagingHarnessRequestPanel.cs  ParticleCounter.cs  ParticleSystemFramerate.cs  PlaneController.cs  ScrollFadeTest.cs  SplitPointController.cs  Split_Test_Render_Feature.cs  UnitySourceGeneratedAssemblyMonoScriptTypes_v1.cs  WrapperEnvironmentLauncher.cs  WrapperSandbox.cs  test.cs
server/mtga_decompiled/Assembly-CSharp/HasbroGo/: AccountManager.cs  AgeGateMenu.cs  Bootstrap.cs  ChallengeConfirmData.cs  ChallengeMenu.cs  ChallengeSendData.cs  ChangeSocialPresencePanel.cs  ClientCredentials.cs  CodeRedeemMenu.cs  ErrorEventArgs.cs  ExamplesMainMenu.cs  FriendChat.cs  FriendTile.cs  FriendTileHeader.cs  FriendTileType.cs  HasbroGoSDKManager.cs  LoginMenu.cs  OAuthLoginMenu.cs  PatronusLogger.cs  RegistrationMenu.cs  SceneLoader.cs  SelectableTabNavigation.cs  SendFriendRequestPanel.cs  SocialBust.cs  SocialManager.cs  SocialMenu.cs  SocialPanel.cs  UpdatePresenceEventArgs.cs  WandsCustomEventData.cs  (+2 more)
server/mtga_decompiled/Core/: AIUtilities.cs  AbilityBadgeData.cs  AbilityBadgeUtil.cs  AbilityHanger.cs  AbilityHangerBase.cs  AbilityHangerData.cs  AbilityHangerItem.cs  AbilityHangerView.cs  AcceptableChoiceContainer.cs  AccessoryAnimationCycler.cs  AccessoryCollider_Hover.cs  AccessoryController.cs  AccessoryController_InteractiveParts.cs  AccessoryController_Legacy.cs  AccessoryCooldownTimerManager.cs  AccessoryDelegateBase.cs  AccessoryEventCycler.cs  AccessoryEventMaterialAnim.cs  AccessoryEventSO.cs  AccessoryEventVFXGroup.cs  AccessoryEvent_ClickTriggerAnim.cs  AccessoryEvent_SetAnimator.cs  AccessoryEvent_SetTransform.cs  AccessoryEvent_ShaderOps.cs  AccessoryEvent_SwapMaterial.cs  AccessoryEvent_Transition.cs  AccessoryEvent_TriggerFunc.cs  AccessoryEvent_VFXOps.cs  AccessoryHelper_AnimCooldownTrigger.cs  AccessoryMeteredAnimCycler.cs  AccessoryMeteredTriggerStateAnimCycler.cs  AccessoryMeteredVFXTrigger.cs  AccessoryPeriodicTimerManager.cs  AccessoryRotation.cs  AccessorySandbox.cs  AccessoryScale.cs  AccessoryThresholdAnimCycler.cs  AccessoryVariantCycler.cs  AccessoryVariantDelegate.cs  AccessoryVariantDelegate_Phases.cs  (+1149 more)
server/src/: main.cpp
server/src/auth/: connection_pool.cpp  connection_pool.hpp  game_history_store.cpp  game_history_store.hpp  jwt_manager.cpp  jwt_manager.hpp  migration_runner.cpp  migration_runner.hpp  password_hasher.cpp  password_hasher.hpp  rating_store.cpp  rating_store.hpp  scoped_connection.hpp  session_store.cpp  session_store.hpp  user_store.cpp  user_store.hpp
server/src/engine/: action_queue.cpp  action_queue.hpp  card_registry.cpp  card_registry.hpp  combat_manager.cpp  combat_manager.hpp  continuous_effect.cpp  continuous_effect.hpp  deck_validator.cpp  deck_validator.hpp  event_broadcaster.cpp  event_broadcaster.hpp  game.cpp  game.hpp  game_clock.cpp  game_clock.hpp  game_context_impl.cpp  game_context_impl.hpp  game_manager.cpp  game_manager.hpp  mana_pool.cpp  mana_pool.hpp  match.cpp  match.hpp  permanent.cpp  permanent.hpp  player.cpp  player.hpp  preset_deck.cpp  preset_deck.hpp  priority_system.cpp  priority_system.hpp  replacement_effect.cpp  replacement_effect.hpp  state_based_actions.cpp  state_based_actions.hpp  target_filter.cpp  target_filter.hpp  the_stack.cpp  the_stack.hpp  (+6 more)
server/src/matchmaking/: matchmaker.cpp  matchmaker.hpp  queue.cpp  queue.hpp
server/src/server/: config.cpp  config.hpp  server.cpp  server.hpp
server/src/service/: auth_service_impl.cpp  auth_service_impl.hpp  game_service_impl.cpp  game_service_impl.hpp  matchmaking_service_impl.cpp  matchmaking_service_impl.hpp
server/src/util/: logging.cpp  logging.hpp  metrics.cpp  metrics.hpp  uuid.hpp
(+4976 files in other folders)
